--- a/server/.deps/numbers.Po
+++ b/server/.deps/numbers.Po
@@ -1,1 +1,153 @@
-# dummy
+numbers.o numbers.o: numbers.c \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h \
+  /usr/include/limits.h /usr/include/sys/cdefs.h \
+  /usr/include/machine/limits.h /usr/include/i386/limits.h \
+  /usr/include/i386/_limits.h /usr/include/sys/syslimits.h \
+  /usr/include/errno.h /usr/include/sys/errno.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/float.h my-math.h \
+  /usr/include/math.h /usr/include/architecture/i386/math.h my-stdlib.h \
+  config.h /usr/include/stdlib.h /usr/include/Availability.h \
+  /usr/include/AvailabilityInternal.h /usr/include/_types.h \
+  /usr/include/sys/_types.h /usr/include/machine/_types.h \
+  /usr/include/i386/_types.h /usr/include/sys/wait.h \
+  /usr/include/sys/signal.h /usr/include/sys/appleapiopts.h \
+  /usr/include/machine/signal.h /usr/include/i386/signal.h \
+  /usr/include/i386/_structs.h /usr/include/sys/_structs.h \
+  /usr/include/machine/_structs.h /usr/include/mach/i386/_structs.h \
+  /usr/include/sys/resource.h /usr/include/machine/endian.h \
+  /usr/include/i386/endian.h /usr/include/sys/_endian.h \
+  /usr/include/libkern/_OSByteOrder.h \
+  /usr/include/libkern/i386/_OSByteOrder.h /usr/include/alloca.h \
+  /usr/include/machine/types.h /usr/include/i386/types.h \
+  /usr/include/i386/_types.h my-string.h /usr/include/string.h my-time.h \
+  /usr/include/time.h /usr/include/_structs.h functions.h my-stdio.h \
+  /usr/include/stdio.h execute.h db.h program.h structures.h version.h \
+  opcode.h options.h parse_cmd.h log.h random.h storage.h ref_count.h \
+  utils.h
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h:
+
+/usr/include/limits.h:
+
+/usr/include/sys/cdefs.h:
+
+/usr/include/machine/limits.h:
+
+/usr/include/i386/limits.h:
+
+/usr/include/i386/_limits.h:
+
+/usr/include/sys/syslimits.h:
+
+/usr/include/errno.h:
+
+/usr/include/sys/errno.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/float.h:
+
+my-math.h:
+
+/usr/include/math.h:
+
+/usr/include/architecture/i386/math.h:
+
+my-stdlib.h:
+
+config.h:
+
+/usr/include/stdlib.h:
+
+/usr/include/Availability.h:
+
+/usr/include/AvailabilityInternal.h:
+
+/usr/include/_types.h:
+
+/usr/include/sys/_types.h:
+
+/usr/include/machine/_types.h:
+
+/usr/include/i386/_types.h:
+
+/usr/include/sys/wait.h:
+
+/usr/include/sys/signal.h:
+
+/usr/include/sys/appleapiopts.h:
+
+/usr/include/machine/signal.h:
+
+/usr/include/i386/signal.h:
+
+/usr/include/i386/_structs.h:
+
+/usr/include/sys/_structs.h:
+
+/usr/include/machine/_structs.h:
+
+/usr/include/mach/i386/_structs.h:
+
+/usr/include/sys/resource.h:
+
+/usr/include/machine/endian.h:
+
+/usr/include/i386/endian.h:
+
+/usr/include/sys/_endian.h:
+
+/usr/include/libkern/_OSByteOrder.h:
+
+/usr/include/libkern/i386/_OSByteOrder.h:
+
+/usr/include/alloca.h:
+
+/usr/include/machine/types.h:
+
+/usr/include/i386/types.h:
+
+/usr/include/i386/_types.h:
+
+my-string.h:
+
+/usr/include/string.h:
+
+my-time.h:
+
+/usr/include/time.h:
+
+/usr/include/_structs.h:
+
+functions.h:
+
+my-stdio.h:
+
+/usr/include/stdio.h:
+
+execute.h:
+
+db.h:
+
+program.h:
+
+structures.h:
+
+version.h:
+
+opcode.h:
+
+options.h:
+
+parse_cmd.h:
+
+log.h:
+
+random.h:
+
+storage.h:
+
+ref_count.h:
+
+utils.h:
