--- a/server/.deps/server.Po
+++ b/server/.deps/server.Po
@@ -1,1 +1,191 @@
-# dummy
+server.o server.o: server.c my-types.h config.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h \
+  /usr/include/limits.h /usr/include/sys/cdefs.h \
+  /usr/include/machine/limits.h /usr/include/i386/limits.h \
+  /usr/include/i386/_limits.h /usr/include/sys/syslimits.h \
+  /usr/include/sys/time.h /usr/include/sys/_types.h \
+  /usr/include/machine/_types.h /usr/include/i386/_types.h \
+  /usr/include/sys/_structs.h /usr/include/time.h /usr/include/_types.h \
+  /usr/include/_structs.h /usr/include/sys/_select.h \
+  /usr/include/sys/types.h /usr/include/sys/appleapiopts.h \
+  /usr/include/machine/types.h /usr/include/i386/types.h \
+  /usr/include/i386/_types.h /usr/include/machine/endian.h \
+  /usr/include/i386/endian.h /usr/include/sys/_endian.h \
+  /usr/include/libkern/_OSByteOrder.h \
+  /usr/include/libkern/i386/_OSByteOrder.h my-signal.h \
+  /usr/include/signal.h /usr/include/sys/signal.h \
+  /usr/include/machine/signal.h /usr/include/i386/signal.h \
+  /usr/include/i386/_structs.h /usr/include/machine/_structs.h \
+  /usr/include/mach/i386/_structs.h my-stdarg.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stdarg.h my-stdio.h \
+  /usr/include/stdio.h my-stdlib.h /usr/include/stdlib.h \
+  /usr/include/Availability.h /usr/include/AvailabilityInternal.h \
+  /usr/include/sys/wait.h /usr/include/sys/resource.h \
+  /usr/include/alloca.h my-string.h /usr/include/string.h my-unistd.h \
+  /usr/include/unistd.h /usr/include/sys/unistd.h \
+  /usr/include/sys/select.h my-wait.h db.h program.h structures.h \
+  version.h db_io.h disassemble.h execute.h opcode.h options.h \
+  parse_cmd.h functions.h list.h log.h network.h server.h parser.h \
+  random.h storage.h ref_count.h streams.h tasks.h timers.h my-time.h \
+  unparse.h utils.h
+
+my-types.h:
+
+config.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h:
+
+/usr/include/limits.h:
+
+/usr/include/sys/cdefs.h:
+
+/usr/include/machine/limits.h:
+
+/usr/include/i386/limits.h:
+
+/usr/include/i386/_limits.h:
+
+/usr/include/sys/syslimits.h:
+
+/usr/include/sys/time.h:
+
+/usr/include/sys/_types.h:
+
+/usr/include/machine/_types.h:
+
+/usr/include/i386/_types.h:
+
+/usr/include/sys/_structs.h:
+
+/usr/include/time.h:
+
+/usr/include/_types.h:
+
+/usr/include/_structs.h:
+
+/usr/include/sys/_select.h:
+
+/usr/include/sys/types.h:
+
+/usr/include/sys/appleapiopts.h:
+
+/usr/include/machine/types.h:
+
+/usr/include/i386/types.h:
+
+/usr/include/i386/_types.h:
+
+/usr/include/machine/endian.h:
+
+/usr/include/i386/endian.h:
+
+/usr/include/sys/_endian.h:
+
+/usr/include/libkern/_OSByteOrder.h:
+
+/usr/include/libkern/i386/_OSByteOrder.h:
+
+my-signal.h:
+
+/usr/include/signal.h:
+
+/usr/include/sys/signal.h:
+
+/usr/include/machine/signal.h:
+
+/usr/include/i386/signal.h:
+
+/usr/include/i386/_structs.h:
+
+/usr/include/machine/_structs.h:
+
+/usr/include/mach/i386/_structs.h:
+
+my-stdarg.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stdarg.h:
+
+my-stdio.h:
+
+/usr/include/stdio.h:
+
+my-stdlib.h:
+
+/usr/include/stdlib.h:
+
+/usr/include/Availability.h:
+
+/usr/include/AvailabilityInternal.h:
+
+/usr/include/sys/wait.h:
+
+/usr/include/sys/resource.h:
+
+/usr/include/alloca.h:
+
+my-string.h:
+
+/usr/include/string.h:
+
+my-unistd.h:
+
+/usr/include/unistd.h:
+
+/usr/include/sys/unistd.h:
+
+/usr/include/sys/select.h:
+
+my-wait.h:
+
+db.h:
+
+program.h:
+
+structures.h:
+
+version.h:
+
+db_io.h:
+
+disassemble.h:
+
+execute.h:
+
+opcode.h:
+
+options.h:
+
+parse_cmd.h:
+
+functions.h:
+
+list.h:
+
+log.h:
+
+network.h:
+
+server.h:
+
+parser.h:
+
+random.h:
+
+storage.h:
+
+ref_count.h:
+
+streams.h:
+
+tasks.h:
+
+timers.h:
+
+my-time.h:
+
+unparse.h:
+
+utils.h:
