--- a/server/.deps/property.Po
+++ b/server/.deps/property.Po
@@ -1,1 +1,71 @@
-# dummy
+property.o property.o: property.c db.h config.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h \
+  /usr/include/limits.h /usr/include/sys/cdefs.h \
+  /usr/include/machine/limits.h /usr/include/i386/limits.h \
+  /usr/include/i386/_limits.h /usr/include/sys/syslimits.h program.h \
+  structures.h my-stdio.h /usr/include/stdio.h /usr/include/_types.h \
+  /usr/include/sys/_types.h /usr/include/machine/_types.h \
+  /usr/include/i386/_types.h version.h functions.h execute.h opcode.h \
+  options.h parse_cmd.h list.h storage.h my-string.h \
+  /usr/include/string.h ref_count.h utils.h
+
+db.h:
+
+config.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h:
+
+/usr/include/limits.h:
+
+/usr/include/sys/cdefs.h:
+
+/usr/include/machine/limits.h:
+
+/usr/include/i386/limits.h:
+
+/usr/include/i386/_limits.h:
+
+/usr/include/sys/syslimits.h:
+
+program.h:
+
+structures.h:
+
+my-stdio.h:
+
+/usr/include/stdio.h:
+
+/usr/include/_types.h:
+
+/usr/include/sys/_types.h:
+
+/usr/include/machine/_types.h:
+
+/usr/include/i386/_types.h:
+
+version.h:
+
+functions.h:
+
+execute.h:
+
+opcode.h:
+
+options.h:
+
+parse_cmd.h:
+
+list.h:
+
+storage.h:
+
+my-string.h:
+
+/usr/include/string.h:
+
+ref_count.h:
+
+utils.h:
