--- a/server/.deps/unparse.Po
+++ b/server/.deps/unparse.Po
@@ -1,1 +1,104 @@
-# dummy
+unparse.o unparse.o: unparse.c my-ctype.h config.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h \
+  /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h \
+  /usr/include/limits.h /usr/include/sys/cdefs.h \
+  /usr/include/machine/limits.h /usr/include/i386/limits.h \
+  /usr/include/i386/_limits.h /usr/include/sys/syslimits.h \
+  /usr/include/ctype.h /usr/include/runetype.h /usr/include/_types.h \
+  /usr/include/sys/_types.h /usr/include/machine/_types.h \
+  /usr/include/i386/_types.h my-stdio.h /usr/include/stdio.h ast.h \
+  parser.h program.h structures.h version.h sym_table.h decompile.h \
+  exceptions.h /usr/include/setjmp.h /usr/include/machine/setjmp.h \
+  /usr/include/i386/setjmp.h functions.h execute.h db.h opcode.h \
+  options.h parse_cmd.h keywords.h list.h log.h unparse.h storage.h \
+  my-string.h /usr/include/string.h ref_count.h streams.h utils.h
+
+my-ctype.h:
+
+config.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/limits.h:
+
+/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/syslimits.h:
+
+/usr/include/limits.h:
+
+/usr/include/sys/cdefs.h:
+
+/usr/include/machine/limits.h:
+
+/usr/include/i386/limits.h:
+
+/usr/include/i386/_limits.h:
+
+/usr/include/sys/syslimits.h:
+
+/usr/include/ctype.h:
+
+/usr/include/runetype.h:
+
+/usr/include/_types.h:
+
+/usr/include/sys/_types.h:
+
+/usr/include/machine/_types.h:
+
+/usr/include/i386/_types.h:
+
+my-stdio.h:
+
+/usr/include/stdio.h:
+
+ast.h:
+
+parser.h:
+
+program.h:
+
+structures.h:
+
+version.h:
+
+sym_table.h:
+
+decompile.h:
+
+exceptions.h:
+
+/usr/include/setjmp.h:
+
+/usr/include/machine/setjmp.h:
+
+/usr/include/i386/setjmp.h:
+
+functions.h:
+
+execute.h:
+
+db.h:
+
+opcode.h:
+
+options.h:
+
+parse_cmd.h:
+
+keywords.h:
+
+list.h:
+
+log.h:
+
+unparse.h:
+
+storage.h:
+
+my-string.h:
+
+/usr/include/string.h:
+
+ref_count.h:
+
+streams.h:
+
+utils.h:
